--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Unlimited Wordle - A word game</title>
+    <title>Adrianna's Wordle - A word game</title>
     <style>
       body {
         display: flex;
@@ -450,7 +450,7 @@
       </div>
       <div class="title">
         <span>Wordle</span>
-        <span>Unlimited</span>
+        <span>Adrianna</span>
       </div>
       <div class="header-actions">
         <button id="stats"></button>
